package com.ingenieriadirecta;

public class ProductoFisico {
  private double costeEnvio;

  public void ProductoFisico(String nombre, double precio, double costeEnvio) {
    // ...
  }

  public double calcularPrecioFinal() {
    // ...
  }
}
